<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etOperando1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/operando_1"
            android:inputType="numberDecimal"
            android:autofillHints="none"
            android:padding="12dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etOperando2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/operando_2"
            android:inputType="numberDecimal"
            android:autofillHints="none"
            android:padding="12dp"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/spinnerOperaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnCalcularOperacion"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular_operacion"
            android:padding="12dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tvResultadoCalculadora"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:minHeight="48dp" />

    </LinearLayout>
</ScrollView>
